--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="screen" id="screen-1" data-video="vid/video.mp4">
+        <div class="screen" id="screen-1" data-video="vid/video.webm">
             <img src="images/bird.jpg" class="big-image" />
         </div>
     </div>
