--- a/index.html
+++ b/index.html
@@ -20,9 +20,22 @@
         </div>
         
         <div class="contentForm">
-        	<form>
-        		<input type="text" name="name">
-        		<label>Nombre</label>
+        	<h3>Sign In</h3>
+        	<form action="#" method="post">
+        		<div class="name">
+	      	  		<div class="input"><input type="text" name="name"></div>
+	   	     		<div class="label"><label>Name</label></div>
+        		</div>
+        		<div class="password">
+	      	  		<div class="input"><input type="text" name="password"></div>
+	      	  		<div class="label"><label>Password</label></div>
+	   	     		<div class="forgot">	   	     			
+	   	     			<a href="#"><p>Forgot Password</p></a>
+	   	     		</div>	   	     		
+        		</div>
+				<div class="enterContent">
+					<div class="button"><a href="#"><img src="images/enterButton.png" class="img-responsive"></a></div>
+				</div>
         	</form>
         </div>
     </div>
