--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	   	     		</div>	   	     		
         		</div>
 				<div class="enterContent">
-					<div class="button"><a href="#"><img src="images/enterButton.png" class="img-responsive"></a></div>
+					<div class="button"><a href="logged.html"><img src="images/enterButton.png" class="img-responsive"></a></div>
 				</div>
         	</form>
         </div>
