--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
 				</div>
         	</form>
         </div>
+		<div class="skip">
+				<a href="#" ><img src="images/skip-intro.png" class="img-responsive"></a>
+		</div>
+		<div class="loading">
+				<a href="#" ><img src="images/loader64.gif" class="img-responsive"></a>
+		</div>
+		
     </div>
 
 
