css para eliminar errors. Background image

--- a/index.html
+++ b/index.html
@@ -35,18 +35,13 @@
         		</div>
 				<div class="enterContent">
 					<div class="button"><a href="logged.html"><img src="images/enterButton.png" class="img-responsive"></a></div>
-				</div>
+				</fdiv>
         	</form>
         </div>
-		<div class="skip">
-				<a href="#" ><img src="images/skip-intro.png" class="img-responsive"></a>
-		</div>
-
-		
     </div>
-		<div class="loading">
-				<a href="#" ><img src="images/loader64.gif" class="img-responsive"></a>
-		</div>
+	<div class="skip">
+			<a href="#" ><img src="images/skip-intro.png" class="img-responsive"></a>
+	</div>
 
     <!-- BigVideo Dependencies -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
