--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 	</div>
 
     <!-- BigVideo Dependencies -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.1.min.js"><\/script>')</script>
     <script src="js/vendor/jquery-ui-1.8.22.custom.min.js"></script>
     <script src="js/vendor/video.js"></script>
     <script src="js/vendor/jquery.imagesloaded.min.js"></script>
-    <script src="js/vendor/bigvideo.js"></script>
-    <script src="js/main.js"></script>
+	<script src="js/vendor/bigvideo.js"></script>
+    <script src="js/util.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
