--- a/logged.html
+++ b/logged.html
@@ -8,13 +8,15 @@
     <meta name="description" content="Novomedici" />
     <meta name="keywords" content="novomedici" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    
     <link rel="stylesheet" href="css/main.css">
+    
+    <script src="js/vendor/modernizr-2.5.3.min.js"></script>
 </head>
 <body>
     <div class="logged">      
     </div>
 
-    <!-- BigVideo Dependencies -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.1.min.js"><\/script>')</script>
     <script src="js/vendor/jquery-ui-1.8.22.custom.min.js"></script>
