--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	
 	<script>
-		var imageAddr = "images/background.png" + "?n=" + Math.random();
+		var imageAddr = "images/test.jpg" + "?n=" + Math.random();
 		var startTime, endTime;
 		var downloadSize = 2853;
 		var download = new Image();
