--- a/index.html
+++ b/index.html
@@ -1,31 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	
-	<script>
-		var imageAddr = "images/test.jpg" + "?n=" + Math.random();
-		var startTime, endTime;
-		var downloadSize = 428562;
-		var download = new Image();
-		download.onload = function () {
-		    endTime = (new Date()).getTime();
-		    showResults();
-		}
-		startTime = (new Date()).getTime();
-		download.src = imageAddr;
-	
-		function showResults() {
-		    var duration = (endTime - startTime) / 1000;
-		    var bitsLoaded = downloadSize * 8;
-		    var speedBps = (bitsLoaded / duration).toFixed(2);
-		    var speedKbps = (speedBps / 1024).toFixed(2);
-		    var speedMbps = (speedKbps / 1024).toFixed(2);
-		    alert("Your connection speed is: \n" + 
-		           speedBps + " bps\n"   + 
-		           speedKbps + " kbps\n" + 
-		           speedMbps + " Mbps\n" );
-		}
-	</script>
+
     <title>Novomedici</title>
     
     <meta charset="utf-8">
@@ -69,6 +45,9 @@
     </div>
 	<div class="skip">
 		<a href="#">Skip Intro</a>
+	</div>
+	<div class="progress">
+		<progress max="100" id="progressBar" ></progress>
 	</div>
 
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.1.min.js"><\/script>')</script>
