--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
 	<div class="skip">
 		<a href="#">Skip Intro</a>
 	</div>
-	<div class="progress">
-		<progress max="100" id="progressBar" ></progress>
-	</div>
+	<div class="progressBar"></div>
 
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.1.min.js"><\/script>')</script>
     <script src="js/vendor/jquery-ui-1.8.22.custom.min.js"></script>
