--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="js/vendor/modernizr-2.5.3.min.js"></script>
 </head>
 <body>
-    <div class="videoBackground" data-video-base-src="http://54.190.34.161/novomedici/vid/video">
+    <div class="videoBackground" data-video-base-src="vid/video">
     </div>
     <div class="wrapper">
         
