animations left to right

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 				</div>
         	</form>
         </div>
+        
+        <div class="backgroundImage"></div>
     </div>
 	<div class="skip">
 		<a href="#">Skip Intro</a>
