--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 	<div class="skip">
 		<a href="#">Skip Intro</a>
 	</div>
+	<div class="mute">
+		<a href="#">Audio Off</a>
+	</div>
+	
 	<div class="progressBar"></div>
 
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.1.min.js"><\/script>')</script>
