--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 	      	  		<div class="input"><input type="text" name="password"></div>
 	      	  		<div class="label"><label>Password</label></div>
 	   	     		<div class="forgot">	   	     			
-	   	     			<a href="#"><p>Forgot Password</p></a>
+	   	     			<a href="#">Forgot Password</a>
 	   	     		</div>	   	     		
         		</div>
 				<div class="enterContent">
-					<a href="logged.html" class="button"><img src="images/enterButton.png" class="img-responsive"></a>
+					<a href="logged.html" class="button">Enter</a>
 				</div>
         	</form>
         </div>
@@ -48,6 +48,10 @@
 	<div class="skip">
 		<a href="#">Skip Intro</a>
 	</div>
+	<div class="mute">
+		<a href="#">Audio Off</a>
+	</div>
+	
 	<div class="progressBar"></div>
 
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.1.min.js"><\/script>')</script>
