--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	   	     		<div class="label"><label>Name</label></div>
         		</div>
         		<div class="password">
-	      	  		<div class="input"><input type="text" name="password"></div>
+	      	  		<div class="input"><input type="password" name="password"></div>
 	      	  		<div class="label"><label>Password</label></div>
 	   	     		<div class="forgot">	   	     			
 	   	     			<a href="#">Forgot Password</a>
